fixed footer and header overflowing right

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -51,6 +51,7 @@ a:visited{
 }
 
 .panel {
+    box-sizing: border-box;
     box-shadow: inset 0 0 20px var(--panel-shadow);
     background-color: var(--panel-color);
     border-radius: 14px;
